# kafka_module

./: README.md  pyproject.toml
kafka_module/: kafka_consumer.py  kafka_producer.py
tests/: consumer_test.py
